--- a/gobarber/package.json
+++ b/gobarber/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "debug": "node --inspect -r sucrase/register src/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -13,7 +14,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.10.3"
+    "sequelize": "^5.10.3",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
