--- a/gobarber/.env
+++ b/gobarber/.env
@@ -1,6 +1,10 @@
+DOMAIN=localhost
+PORT=3333
+
 DB_HOST=localhost
 DB_USERNAME=docker
 DB_PASSWORD=docker
 DATABASE=gobarber
 
 PASS_HASH=ac691adcb63199049b9345b4a1cbadad
+
